crates/ruff_python_parser/tests/snapshots/invalid_syntax@starred_comprehension_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/starred_comprehension_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..28,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..27,
                    value: ListComp(
                        ExprListComp {
                            node_index: NodeIndex(None),
                            range: 0..27,
                            elt: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 1..5,
                                    id: Name("item"),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 6..26,
                                    node_index: NodeIndex(None),
                                    target: Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 10..16,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 11..16,
                                                    id: Name("items"),
                                                    ctx: Store,
                                                },
                                            ),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 20..26,
                                            id: Name("source"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | [item for *items in source]
  |           ^^^^^^ Syntax Error: Starred expression cannot be used here
  |
